{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 25,
  "lineage": "c4927c3f-c984-0605-80a5-9ede8ef611a6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "emr_core",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992258813833:security-group/sg-0d5d79407b768a37b",
            "description": "Security group for EMR core nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d5d79407b768a37b",
            "ingress": [],
            "name": "pysparkmlrag-emr-core-sg",
            "name_prefix": "",
            "owner_id": "992258813833",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pysparkmlrag-emr-core-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "pysparkmlrag-emr-core-sg",
              "Project": "PySparkMLRAG"
            },
            "timeouts": null,
            "vpc_id": "vpc-061a192580dbca512"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "emr_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992258813833:security-group/sg-0bb3de45dd218abb4",
            "description": "Security group for EMR master node",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bb3de45dd218abb4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "pysparkmlrag-emr-master-sg",
            "name_prefix": "",
            "owner_id": "992258813833",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pysparkmlrag-emr-master-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "pysparkmlrag-emr-master-sg",
              "Project": "PySparkMLRAG"
            },
            "timeouts": null,
            "vpc_id": "vpc-061a192580dbca512"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    }
  ]
}